syntax = "proto3";

message ProductValue {
  int32 id = 1;
  string name = 2;
  double price = 3;
  repeated string tags = 4;
}